Styled drop down menu using base pure styles.

--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,12 @@
   <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
   <![endif]-->
 <script type="text/template" id="choices-template">
-<div>
-<% _.map(this.collection.models, function(model) { %>
-  <p><%= model.get("full_registration") %></p>
-<% }) %>
+<div class="pure-menu pure-menu-open">
+    <ul>
+      <% _.map(this.collection.models, function(model) { %>
+        <li><a href='#'><%= model.get("text") %></a></li>
+      <% }) %>
+    </ul>
 </div>
 </script>
 
