--- a/app/index.html
+++ b/app/index.html
@@ -8,21 +8,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Treasure JS</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
   <!-- build:css styles/app.css -->
   <link rel="stylesheet" href="styles/vendor/pure/pure-min.css">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/marketing.css">
+  <style type="text/css">body { font-size: 1.2em; }</style>
   <!-- endbuild -->
 </head>
 <body>
   <div class="content">
     <div class="content">
       <h1>Search For A Car</h1>
-      <form>
-        <input id="search" autocomplete="off">
+      <form class="pure-form">
+        <input id="search" autocapitalize="off" autocorrect="off" autocomplete="off" class="pure-input-1" type="text">
         <div id="choices"></div>
       </form>
     </div>
@@ -50,8 +51,6 @@
 
   <script src="scripts/treasure.js"></script>
   <script src="scripts/main.js"></script>
-  <script src="scripts/fastclick.js"></script>
-  <script src="scripts/fastclick.example.js"></script>
   <!-- endbuild -->
 </body>
 </html>
