--- a/app/index.html
+++ b/app/index.html
@@ -6,51 +6,77 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Treasure JS</title>
+  <title>Treasure JS
+  </title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
   <!-- build:css styles/app.css -->
   <link rel="stylesheet" href="styles/vendor/pure/pure-min.css">
-  <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="styles/marketing.css">
-  <style type="text/css">body { font-size: 1.2em; }</style>
+  <link rel="stylesheet" href="styles/chosen.css">
+  <link rel="stylesheet" href="styles/treasure.css">
+
   <!-- endbuild -->
+
 </head>
 <body>
   <div class="content">
     <div class="content">
-      <h1>Search For A Car</h1>
+      <h1>Search For A Car
+      </h1>
       <form class="pure-form">
-        <input id="search" autocapitalize="off" autocorrect="off" autocomplete="off" class="pure-input-1" type="text">
-        <div id="choices"></div>
+
+        <div class="chosen-container chosen-container-multi chosen-container-active" style="width: 350px;" title="">
+          <ul class="chosen-choices">
+            <li class="search-choice">
+              <span>Vauxhall</span><a class="search-choice-close" data-option-array-index="2"></a>
+            </li>
+            <li class="search-field">
+              <input id="search" type="text" autocomplete="off" style="width: 25px;">
+            </li>
+
+          </ul>
+          <div id="choices" class="chosen-drop">
+          </div>
+        </div>
       </form>
     </div>
-
   </div>
 
 
   <!--[if lt IE 7]>
-  <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+  <p class="chromeframe">You are using an <strong>outdated
+  </strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser
+  </a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame
+  </a> to improve your experience.
+  </p>
   <![endif]-->
-<script type="text/template" id="choices-template">
-<div class="pure-menu pure-menu-open">
-    <ul>
-      <% _.map(this.collection.models, function(model) { %>
-        <li><a><%= model.get("text") %></a></li>
-      <% }) %>
-    </ul>
-</div>
-</script>
+  <script type="text/template" id="choices-template">
+  <ul class="chosen-results">
+  <% _.map(this.collection.models, function(model) { %>
+    <li class="active-result" data-text="<%= model.get("text") %>" data-name="<%= model.get("name") %>">
+      <%= model.get("text") %>
+    </li>
+    <% }) %>
+
+  </ul>
+  </script>
 
   <!-- build:js scripts/app.js -->
-  <script src="bower_components/zepto/zepto.js"></script>
-  <script src="bower_components/underscore/underscore.js"></script>
-  <script src="bower_components/backbone/backbone.js"></script>
+  <script src="bower_components/zepto/zepto.js">
+  </script>
+  <script src="bower_components/underscore/underscore.js">
+  </script>
+  <script src="bower_components/backbone/backbone.js">
+  </script>
 
-  <script src="scripts/treasure.js"></script>
-  <script src="scripts/main.js"></script>
+  <script src="scripts/treasure.js">
+  </script>
+  <script src="scripts/main.js">
+  </script>
   <!-- endbuild -->
+
 </body>
+
 </html>
