Add in scroll up on focus, style the choices with a horrible green colour, remove rounded corners.

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
       </h1>
       <form class="pure-form">
 
-        <div class="chosen-container chosen-container-multi chosen-container-active" style="width: 350px;" title="">
+        <div class="chosen-container chosen-container-multi chosen-container-active" style="width: 100%;" title="">
           <ul id="choices" class="chosen-choices">
           </ul>
           <div id="dropdown" class="chosen-drop">
@@ -54,7 +54,7 @@
     </li>
   <% }) %>
   <li class="search-field">
-    <input id="search" type="text" autocomplete="off" style="width: 25px;">
+    <input id="search" type="text" autocomplete="off" autocorrect="off" autocapitalize="off" style="width: 25px;">
   </li>
   </script>
 
